# grid07_ai

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  app.js  index.html  pyproject.toml  requirements.txt  style.css  vercel.json
api/: index.py
app/: main.py  web_api.py
app/config/: settings.py
app/embeddings/: embedding_model.py
app/graph/: langgraph_flow.py
app/notebooks/: grid07.ipynb  phase_1.ipynb  phase_2.ipynb
app/notebooks/chroma_db/: chroma.sqlite3
app/personas/: bot_personas.py
app/rag/: defense.py
app/router/: routing.py
app/tools/: mock_search.py
app/utils/: helpers.py
app/vectorstore/: chroma_store.py
chroma_db/: chroma.sqlite3
logs/: execution_logs.md
